# inference-router

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
bench/: README.md  chaos-result.json  chaos-tls.sh  load.cpp  regress.py
bench/results/: baseline.json  bench-10k.json
docs/: pool.md  reactor.md  shutdown.md
src/: acceptor.cpp  acceptor.h  backend_pool.cpp  backend_pool.h  backend_set.cpp  backend_set.h  connection.cpp  connection.h  handler.cpp  handler.h  log.cpp  log.h  main.cpp  metrics.cpp  metrics.h  shutdown.cpp  shutdown.h  thread_pool.cpp  thread_pool.h  tls.cpp  tls.h
tests/chaos/: chaos.cpp
tests/fuzz/: fuzz_wire.cpp
tests/integration/: test_router_e2e.cpp
tests/unit/: test_backend_pool.cpp  test_backend_set.cpp  test_connection.cpp  test_metrics.cpp  test_thread_pool.cpp  test_tls.cpp
tools/backend_echo/: main.cpp
